# Deoxys-V2

./: .cursorrules  .gitignore  AGENT_REQUIREMENTS.md  ARCHITECTURE.md  AXIOMHIVE_VALUE_CAPTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  ELITE_UI_FEATURES.md  LICENSE  NETWORK_SAFETY.md  PRODUCT_COMPLETE.md  README.md  README_UI.md  SOVEREIGN_SUBSTRATE_STRATEGY.md  USER_GUIDE.md  dev-server.js  file_tree.json  index.html  keywords.txt  package.json  setup.ps1  setup.sh  test_system.py  verification_report.json
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
deployable/: Containerfile
src/: main.js  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: contract_analyzer.rs  fhe_core.rs  main.rs  mamba_core.rs
src-tauri/src/axiom_determinist/: agents.rs  constraints.rs  dag.rs  mod.rs  orchestrator.rs  reflexion.rs  sandbox.rs
src/axiom_determinist/: llm_integration.py  sterilization_checker.py
src/core/: contract_pipeline.py  contract_runner.py  mamba_core.py  mamba_runner.py
src/core/toon-rs/: Cargo.toml
src/core/toon-rs/src/: lib.rs
src/deployable/: Cargo.toml  risk_calculator.rs
src/deployable/src/: lib.rs
src/legal/: contract_analyzer.py  contract_runner.py
src/security/: fhe_runner.py  fhe_wrapper.py
ui/: global.css  tailwind.config.js
