[package]
name = "axiom-hive"
version = "2.1.0"
edition = "2021"
authors = ["Alexis M. Adams <alexis@axiomhive.com>"]
description = "AxiomHive Sovereign Manifold v2.1.0 - Higher-Dimensional Deterministic Intelligence System enforcing Zero Entropy Law (C=0). Replaces probabilistic AI with mathematically verifiable, deterministic computation."
license = "MIT"
repository = "https://github.com/AXI0MH1VE/Deoxys-V2"
homepage = "https://github.com/AXI0MH1VE/Deoxys-V2"
documentation = "https://github.com/AXI0MH1VE/Deoxys-V2#readme"
keywords = ["axiomhive", "deterministic-ai", "mamba-2", "state-space-model", "homomorphic-encryption", "zero-entropy", "machine-learning"]
categories = ["algorithms", "cryptography", "science", "artificial-intelligence"]

[dependencies]
tauri = { version = "2.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
log = "0.4"
env_logger = "0.10"

# Core modules
toon-rs = { path = "src/core/toon-rs" }
axiom-risk-calculator = { path = "src/deployable" }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
frozen-seed = ["toon-rs/frozen-seed", "axiom-risk-calculator/frozen-seed"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
