[package]
name = "axiom-hive"
version = "2.1.0"
edition = "2021"
authors = ["AxiomHive Sovereign Manifold"]
description = "AxiomHive Sovereign Manifold v2.1.0 - Zero Entropy Deterministic Intelligence System"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Core modules
toon-rs = { path = "../src/core/toon-rs" }
axiom-risk-calculator = { path = "../src/deployable" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
frozen-seed = ["toon-rs/frozen-seed", "axiom-risk-calculator/frozen-seed"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

