[package]
name = "axiom-risk-calculator"
version = "2.1.0"
edition = "2021"
authors = ["AxiomHive Sovereign Manifold"]

[[bin]]
name = "risk_calculator"
path = "risk_calculator.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
colored = "2.0"

[features]
default = []
frozen-seed = []

