[package]
name = "axiom-risk-calculator"
version = "2.1.0"
edition = "2021"
authors = ["AxiomHive Sovereign Manifold"]

[lib]
name = "axiom_risk_calculator"
path = "src/lib.rs"

[[bin]]
name = "risk_calculator"
path = "src/bin/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"

[features]
default = []
frozen-seed = []

